# chatwarp-api

./: .dockerignore  .env  .gitignore  Cargo.toml  Dockerfile  README.md  USAGE_GUIDE.md  build.rs  diff.txt  docker-compose.yml  metadata.json  package-lock.json  package.json
.github/: AGENTS.md
.postman/: config.json  resources.yaml
docker/postgres/init/: 001_instance_schema.sql
docs/: DEVELOPMENT.md  ENV.md  NOISE_CERT_TROUBLESHOOTING.md  PLANNING.md  PROJECT_ARCHITECTURE.md  ROUTES.md  WACORE_MIGRATION.md
http_clients/ureq-client/: Cargo.toml
http_clients/ureq-client/src/: lib.rs
migrations/: 0001_create_auth_states.sql  0002_create_wa_runner_outbox.sql
n8n/: Dockerfile  docker-compose.yml
postman/collections/: chatwarp-api.docker.postman_collection.json
postman/environments/: chatwarp-api docker.environment.yaml  chatwarp-api.docker.postman_environment.json
postman/globals/: workspace.postman_globals.json
proto/: wa_md.proto  whatsapp_v2.proto
scripts/: extract_baileys_cert.js
src/: api_store.rs  app.rs  appstate_sync.rs  baileys.rs  bot.rs  client.rs  config.rs  download.rs  error.rs  group_store.rs  handshake.rs  history_sync.rs  http.rs  jid_utils.rs  lib.rs  lid_pn_cache.rs  main.rs  mediaconn.rs  message.rs  observability.rs  openapi.json  openapi.rs  pair_code.rs  patch_openapi.py  pdo.rs  prekeys.rs  receipt.rs  request.rs  retry.rs  send.rs  session.rs  spam_report.rs  swagger_ui.html  sync_task.rs  test_utils.rs  transport.rs  upload.rs  usync.rs  version.rs  whatsapp.rs
src/auth/: mod.rs  pair.rs  pair_code.rs  prekeys.rs  store.rs
src/bootstrap/: mod.rs
src/client/: context_impl.rs  device_registry.rs  keepalive.rs  lid_pn.rs  sender_keys.rs  sessions.rs
src/config/: mod.rs
src/conn/: handshake.rs  http.rs  jid_utils.rs  keepalive.rs  transport.rs
src/db/: auth_repo.rs  auth_store.rs  mod.rs
src/domain/: business.rs  call.rs  channel.rs  chat.rs  chatbot.rs  common.rs  event.rs  group.rs  instance.rs  label.rs  message.rs  mod.rs  proxy.rs  settings.rs  storage.rs  template.rs
src/errors/: mod.rs
src/events/: dispatcher.rs  error.rs  mod.rs  rabbitmq.rs  webhook.rs  websocket.rs
src/features/: blocking.rs  chatstate.rs  contacts.rs  groups.rs  mex.rs  presence.rs
src/handlers/: basic.rs  chat.rs  chatstate.rs  group.rs  ib.rs  iq.rs  message.rs  mod.rs  notification.rs  receipt.rs  router.rs  traits.rs  unimplemented.rs
src/http/: guards.rs  mod.rs
src/instance/: error.rs  handle.rs  mod.rs  runner.rs  wa_rs_runner.rs
src/manager_ui/: mod.rs
src/metrics/: mod.rs
src/models/: message_model.rs  mod.rs  webhook_model.rs
src/proto/: mod.rs
src/repo/: mod.rs
src/server/: handlers.rs  messages_worker.rs  mod.rs  queue.rs  webhooks.rs
src/server/routes/: apps.rs  calls.rs  channels.rs  chatting.rs  contacts.rs  events.rs  groups.rs  helpers.rs  keys.rs  labels.rs  media.rs  mod.rs  observability.rs  pairing.rs  presence.rs  profile.rs  sessions.rs  status.rs
src/sidecar/: mod.rs
src/socket/: noise_socket.rs
src/state/: mod.rs
src/store/: commands.rs  error.rs  mod.rs  signal.rs  signal_adapter.rs  traits.rs
src/tests/: appstate_sync_tests.rs  bot_tests.rs  client_tests.rs  download_tests.rs  lid_pn_cache_tests.rs  message_tests.rs  pdo_tests.rs  receipt_tests.rs  retry_tests.rs  session_tests.rs  spam_report_tests.rs  usync_tests.rs  version_tests.rs
src/tests/client/: device_registry_tests.rs  sessions_tests.rs
src/tests/features/: blocking_tests.rs  chatstate_tests.rs  contacts_tests.rs  groups_tests.rs  mex_tests.rs  presence_tests.rs
src/tests/handlers/: chatstate_tests.rs  notification_tests.rs  router_tests.rs
src/tests/socket/: noise_socket_tests.rs
src/tests/types/: enc_handler_tests.rs
src/types/: enc_handler.rs  mod.rs
src/utils/: mod.rs
src/wa/: auth.rs  binary_node.rs  error.rs  events.rs  handshake.rs  handshake_proto.rs  keys.rs  message.rs  mod.rs  noise.rs  noise_md.rs  proto_md.rs  qr.rs  transport.rs  types.rs  version.rs  wabinary_tokens.rs
src/wa/signal/: mod.rs  session.rs  store.rs
storages/postgres-storage/: Cargo.toml
storages/postgres-storage/migrations/2026-03-02-000000_postgres_init/: down.sql  up.sql
storages/postgres-storage/migrations/2026-03-03-000001_api_entities/: down.sql  up.sql
storages/postgres-storage/migrations/2026-03-16-000002_api_messages_attempts/: down.sql  up.sql
storages/postgres-storage/migrations/2026-03-16-000003_api_messages_queue_index/: down.sql  up.sql
storages/postgres-storage/src/: lib.rs  postgres_store.rs  schema.rs
storages/sqlite-storage/: Cargo.toml
storages/sqlite-storage/src/: lib.rs  (+1 more)
tests/: app_test.rs  auth_repo_test.rs  auth_state_test.rs  auth_store_test.rs  binary_node_test.rs  chat_group_routes_test.rs  events_pipeline_test.rs  handshake_test.rs  http_smoke.rs  instance_manager_test.rs  instance_routes_test.rs  message_routes_test.rs  noise_test.rs  observability_test.rs  qr_test.rs  signal_test.rs  transport_test.rs
tests/common/: mod.rs  wa_mock.rs  ws_mock.rs
transports/tokio-transport/: Cargo.toml
waproto/: Cargo.toml
warp_core/: Cargo.toml
warp_core/appstate/: Cargo.toml
warp_core/appstate/src/: decode.rs  hash.rs  patch_decode.rs  processor.rs
warp_core/benches/: reporting_token_benchmark.rs
warp_core/binary/: Cargo.toml
warp_core/binary/benches/: binary_benchmark.rs
warp_core/binary/src/: tokens.json
warp_core/libsignal/: Cargo.toml
warp_core/libsignal/src/protocol/: group_cipher.rs  session_cipher.rs
warp_core/libsignal/src/protocol/storage/: traits.rs
warp_core/src/: lib.rs  messages.rs  pair.rs  pair_code.rs  prekeys.rs  proto_helpers.rs  reporting_token.rs  request.rs  runtime.rs  send.rs  send_parallel.rs  usync.rs  xml.rs
warp_core/src/client/: context.rs
warp_core/src/handshake/: state.rs
warp_core/src/store/: commands.rs  device.rs  traits.rs
warp_core/src/types/: call.rs  events.rs  jid.rs  message.rs  newsletter.rs  spam_report.rs  user.rs
warp_core/tests/: appstate_mac_test.rs  binary_protocol_test.rs  jid_test.rs  noise_handshake_test.rs
(+168 files in other folders)
