[package]
name = "chatwarp-api"
version = "0.1.0"
edition = "2024"
build = "build.rs"

[dependencies]
aes-gcm = "0.10.3"
anyhow = "1.0.95"
axum = { version = "0.7.9", features = ["http2", "multipart", "ws"] }
base64 = "0.22.1"
bytes = "1.9.0"
curve25519-dalek = "4.1.3"
dotenvy = "0.15.7"
ed25519-dalek = { version = "2.1.1", features = ["rand_core"] }
futures = "0.3.31"
hkdf = "0.12.4"
http = "1.2.0"
hex = "0.4"
flate2 = "1.0.35"
md5 = "0.7.0"
prost = "0.13.4"
rand_core = { version = "0.6.4", features = ["getrandom"] }
regex = "1.11.1"
reqwest = { version = "0.12.12", default-features = false, features = ["rustls-tls", "http2"] }
qrcode = { version = "0.14.1", features = ["svg"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
sha2 = "0.10.8"
sqlx = { version = "0.8.3", default-features = false, features = ["runtime-tokio-rustls", "postgres"] }
thiserror = "2.0.11"
tokio = { version = "1.43.0", features = ["macros", "rt-multi-thread", "signal", "net", "sync", "time", "fs"] }
tokio-tungstenite = { version = "0.24.0", default-features = false, features = ["connect", "handshake", "rustls-tls-webpki-roots"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "fmt", "json"] }
url = "2.5.4"
x25519-dalek = { version = "2.0.1", features = ["static_secrets"] }

[dev-dependencies]
tower = { version = "0.5.2", features = ["util"] }

[build-dependencies]
prost-build = "0.13.4"
protoc-bin-vendored = "3"
