[package]
name = "chatwarp-api"
version = "0.1.0"
edition = "2024"

[dependencies]
thiserror = "2.0.18"
tokio = { version = "1.43.0", features = ["macros", "rt-multi-thread"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "fmt"] }
wa-rs = { version = "0.2", features = [
    "sqlite-storage",
    "tokio-transport",
    "ureq-client",
] }
libsqlite3-sys = { version = "0.35.0", features = ["bundled"] }
dotenvy = "0.15.7"
qrcode = "0.14.1"
