[package]
repository = "https://github.com/GDKAYKY/whatsapp-rust"
name = "whatsapp-rust-ureq-http-client"
version = "0.2.0"
edition = "2024"
authors = ["GDKAYKY <kaykyvitorgp@gmail.com>"]
license = "MIT"
description = "Ureq-based HTTP client implementation for whatsapp-rust"

[dependencies]
anyhow = { version = "1.0", default-features = false }
async-trait = "0.1.89"
tokio = { version = "1.48.0", features = ["rt"] }
ureq = { version = "3.1.4", default-features = false, features = [
    "rustls",
    "json",
] }
warp_core = { path = "../../warp_core", version = "0.2.0" }
