[package]
repository = "https://github.com/GDKAYKY/chatwarp-api"
name = "chatwarp-api-postgres-storage"
version = "0.2.0"
edition = "2024"
authors = ["GDKAYKY <kaykyvitorgp@gmail.com>"]
license = "MIT"
description = "PostgreSQL storage backend for chatwarp-api"

[dependencies]
async-trait = "0.1.89"
bincode = { version = "2.0.1", features = ["serde"] }
diesel = { version = "2.3.5", default-features = false, features = [
    "postgres",
    "r2d2",
    "32-column-tables",
    "chrono",
    "serde_json",
    "uuid",
] }
diesel_migrations = { version = "2.3.1", default-features = false, features = [
    "postgres",
] }
log = "0.4.29"
prost = { version = "0.14.1", default-features = false }
serde_json = "1"
tokio = { version = "1.48.0", features = ["sync", "rt", "time"] }
uuid = { version = "1.0", features = ["v4"] }

# Workspace dependencies
warp_core = { path = "../../warp_core", version = "0.2.0" }
waproto = { path = "../../waproto", version = "0.2.0" }
