[package]
repository = "https://github.com/GDKAYKY/chatwarp-api"
name = "warp_core-appstate"
version = "0.2.0"
edition = "2024"
authors = ["GDKAYKY <kaykyvitorgp@gmail.com>"]
license = "MIT"
description = "Appstate for WhatsApp protocol"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
anyhow = { version = "1.0", default-features = false }
hkdf = "0.12.3"
prost = { version = "0.14.1", default-features = false }
serde = { version = "1.0.228", features = ["derive"] }
serde-big-array = "0.5"
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
sha2 = "0.10.6"
thiserror = { workspace = true }
warp_core-binary = { path = "../binary", version = "0.2.0", features = [
    "serde",
] }
warp_core-libsignal = { path = "../libsignal", version = "0.2.0" }
waproto = { path = "../../waproto", version = "0.2.0" }

[dev-dependencies]
